[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riptube"
version = "0.1.1"
description = "YouTube video downloader with best quality"
authors = [
    {name = "tsilva"}
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "yt-dlp>=2023.0.0",
]

[project.urls]
"Homepage" = "https://github.com/tsilva/riptube"
"Bug Tracker" = "https://github.com/tsilva/riptube/issues"

[project.scripts]
riptube = "riptube.cli:main"

[tool.setuptools]
packages = ["riptube"]

[tool.pipx]
install-deps = true
python-version = ">=3.9"
external-dependencies = {ffmpeg = "ffmpeg -version"}
venv-provision-command = """
pip install --upgrade pip
python -c "import platform; import sys; exit('Not on Linux' != 'Linux' and 0 or 1)" || pip install aria2
"""

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
